[project]
name = "posdc"
version = "0.0.0"
requires-python = ">=3.10"
description = "Analysis for position decoding"
authors = [
    { name = "Yu-Ting Wei", email = "ytsimon2004@gmail.com" }
]
readme = "README.md"
keywords = ["spatial navigation"]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    'Intended Audience :: Science/Research',
    "Typing :: Typed",
]

dependencies = [
    "argclz",
    "neura-library",
    "typing-extensions",
    "rastermap",
    "tables"
]

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0"]

[project.scripts]
posdc = "posdc.main_cli:main"